<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lenovo.logindemo2.activities.LoginActivity"
    android:background="@drawable/background_image">
    <android.support.v7.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="58dp"
    android:background="@drawable/bg"
    android:minHeight="?attr/actionBarSize"
    android:titleTextColor="@color/colorWhite"/>

    <LinearLayout
        android:id="@+id/firstLayoutLoginPage"
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp"
        android:layout_marginTop="60dp">
        <ImageView
            android:id="@+id/iconLoginIV"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:src="@drawable/businessman"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"

            />
        <EditText
        android:id="@+id/loginEmailET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintEmail"
        android:textColorHint="@color/colorWhite"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/editTextSize"
        android:inputType="textEmailAddress"
        android:layout_marginLeft="@dimen/leftMargin"
        android:layout_marginRight="@dimen/rightMargin"
        android:layout_marginTop="@dimen/topMargin"
            />
        <EditText
            android:id="@+id/loginPasswordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Hintpassword"
            android:textColorHint="@color/colorWhite"
            android:textColor="@color/colorWhite"
            android:inputType="textPassword"
            android:textSize="@dimen/editTextSize"
            android:layout_marginLeft="@dimen/leftMargin"
            android:layout_marginRight="@dimen/rightMargin"
            android:layout_marginTop="@dimen/topMargin"
            />
        <TextView
            android:id="@+id/forgetPwdTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgetPassword"
            android:textColor="@color/colorWhite"
            android:onClick="true"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="180dp"/>
    <Button
        android:id="@+id/loginBT"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/Login"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/editTextSize"
        android:layout_marginTop="@dimen/topMargin"
        android:layout_marginLeft="@dimen/leftMargin"
        android:layout_marginRight="@dimen/rightMargin"
        android:gravity="center"
        android:background="@drawable/bg"
        />
        <TextView
            android:id="@+id/notAccountTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yetNotLogin"
            android:textColor="@color/colorWhite"
            android:onClick="true"
            android:textSize="20dp"
            android:layout_marginTop="@dimen/topMargin"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="@dimen/rightMargin"
            />
    </LinearLayout>

</RelativeLayout>
